--- a/config/database.yml
+++ b/config/database.yml
@@ -79,6 +79,7 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
   database: worlds_in_pocket_production
   username: worlds_in_pocket
   password: <%= ENV["WORLDS_IN_POCKET_DATABASE_PASSWORD"] %>
