--- a/config/database.yml
+++ b/config/database.yml
@@ -84,3 +84,9 @@ production:
   username: worlds_in_pocket
   password: <%= ENV["WORLDS_IN_POCKET_DATABASE_PASSWORD"] %>
   url: <%= ENV['DATABASE_URL'] %>
+
+queue:
+  adapter: postgresql
+  database: worlds_in_pocket_production
+  username: worlds_in_pocket
+  password: <%= ENV["WORLDS_IN_POCKET_DATABASE_PASSWORD"] %>
